[package]
name = "carpe"
version = "1.0.5"
authors = ["0LNetworkCommunity"]
default-run = "carpe"
description = "a wallet for OpenLibra"
edition = "2021"
license = "NOASSERTION"
repository = "https://github.com/0LNetworkCommunity/carpe"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
built = { version = "0.5.1", features = ["git2"] }


[target.'cfg(unix)'.dependencies]
# gmp-mpfr-sys = { version = "1.6", default-features = false }
openssl-sys = "0.9.98"

[dependencies]
libra-query = { git = "https://github.com/0LNetworkCommunity/libra-framework.git", tag = "8.0.3" }
libra-types = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.3" }
libra-txs = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.3" }
libra-wallet = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.3" }

# # without these pinned versions, poem-openapi-types fail
# poem = { version = "=1.3.55", features = ["anyhow", "rustls"] }
# poem-openapi = { version = "=2.0.11", features = ["swagger-ui", "url"] }
# poem-openapi-derive = "=2.0.11"

# notify-rust = "=4.5.10"

# shared with libra-framework and diem
anyhow = "*"
futures = "*"
glob = "*"
hex = "*"
once_cell = "*"
serde = "*"
serde_json = "*"
log = "*"
tokio = "*"
tokio-util = "*"
url = "*"

# only in carpe
directories = "5.0.1"
keyring = "1.2"
simplelog = { version = "0.11.0", features = ["paris"] }
tauri = { version = "^1.5.2", features = ["api-all", "updater"] }


[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
carpe-canary = [] # for building canary versions which use separate config dirs.
carpe-pr = [] # for building pr versions which use separate config dirs.

[dev-dependencies]
serde_yaml = "0.8.24"
