[package]
name = "carpe"
version = "1.0.5"
authors = ["0LNetworkCommunity"]
default-run = "carpe"
description = "a wallet for OpenLibra"
edition = "2024"
license = "NOASSERTION"
repository = "https://github.com/0LNetworkCommunity/carpe"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
built = { version = "0.5.1", features = ["git2"] }


[target.'cfg(unix)'.dependencies]
openssl-sys = "0.9.98"

[dependencies]
libra-query = { git = "https://github.com/0LNetworkCommunity/libra-framework.git", tag = "8.0.6" }
libra-types = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.6" }
libra-txs = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.6" }
libra-wallet = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.6" }

# shared with libra-framework and diem
anyhow = "*"
futures = "*"
glob = "*"
hex = "*"
once_cell = "*"
serde = "*"
serde_json = "*"
log = "*"
tokio = "*"
tokio-util = "*"
url = "*"

# only in carpe
directories = "6"
keyring = "3"
simplelog = { version = "0.12"}
tauri = { version = "^1.5.2", features = ["api-all", "updater"] }


[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
carpe-canary = [] # for building canary versions which use separate config dirs.
carpe-pr = [] # for building pr versions which use separate config dirs.

[dev-dependencies]
serde_yaml = "0.8.24"
