[package]
name = "carpe"
version = "1.1.1"
authors = ["0LNetworkCommunity"]
default-run = "carpe"
description = "a wallet for OpenLibra"
edition = "2021"
license = "NOASSERTION"
repository = "https://github.com/0LNetworkCommunity/carpe"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
built = { version = "0.5.1", features = ["git2"] }


[target.'cfg(unix)'.dependencies]
openssl-sys = "0.9.98"

[dependencies]
libra-query = { git = "https://github.com/0LNetworkCommunity/libra-framework.git", tag = "8.0.6" }
libra-types = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.6" }
libra-txs = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.6" }
libra-wallet = { git = "https://github.com/0LNetworkCommunity/libra-framework", tag = "8.0.6" }

# shared with libra-framework and diem
# pin specific versions to prevent edition 2024 errors
anyhow = "1.0.62"
futures = "0.3.31"
glob = "0.3.0"
hex = { version = "0.4.3", features = ["serde"] }
once_cell = "1.10.0"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
url = { version = "2.2.2", features = ["serde"] }


# only in carpe
directories = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
simplelog = { version = "0.12"}
tauri = { version = "^1.5.2", features = ["api-all", "updater"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
carpe-canary = [] # for building canary versions which use separate config dirs.
carpe-pr = [] # for building pr versions which use separate config dirs.

[dev-dependencies]
serde_yaml = "0.8.24"
